Working midi exporter

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -2202,12 +2202,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first want to be able to generate a random rhythm given a template, and the pair we're using (to choose what probabilities we will have). The rhythm is first stored as a tupple of 0s and 1s."
+    "We first want to be able to generate a random rhythm given a template, given the pair we're using (to choose what probabilities we will have). We first compute the optimal probabilities numerically for the given templare pair. Then, the first template is first used to generate the TN first levels, and then probabilities are simply used to complete the remaining levels generatively. The rhythm is then stored as an array of zeros and ones (for beat and no beat)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Toy templates to test code\n",
+    "template1 = ((), p_beat)\n",
+    "template2 = ((),())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 420,
    "metadata": {
     "scrolled": true
    },
@@ -2215,11 +2226,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.])"
+       "array([0., 1., 1., 0., 1., 0., 0., 0., 1., 0., 1., 0., 1., 0., 0., 0., 0.,\n",
+       "       0., 1., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1., 0., 0., 0.])"
       ]
      },
-     "execution_count": 361,
+     "execution_count": 420,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2227,7 +2238,7 @@
    "source": [
     "def choose_rule(size, p1, p2):\n",
     "    '''\n",
-    "    helper function which chooses a rule (p_split p_beat p_rest) according to the probs\n",
+    "    Helper function which chooses a rule (p_split p_beat p_rest) according to the probs\n",
     "    '''\n",
     "    choice = np.random.random()\n",
     "    p3 = 1-p2-p1\n",
@@ -2303,24 +2314,45 @@
     "                     generate_rhythm_rec(template1),\n",
     "                     generate_rhythm_rec(template1)))\n",
     "\n",
-    "ok = generate_rhythm(template1, template2, template_pairs)\n",
-    "ok"
+    "generated_beat = generate_rhythm(template1, template2, template_pairs)\n",
+    "generated_beat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then convert the array into a midi file. During the conversion, velocities for each beat in the midi file are set accordingly to the position of the beat in the rhythm following a metrical grid. Each additional level in the metrical grid results in a decrase of the velocity by a factor of .85. The sound of the marimba is used for the rhythms."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "[  0  76  90   0 107   0   0   0 127   0  90   0 107   0   0   0   0   0\n",
+      "  90  76 107   0   0   0 127  76  90  76 107   0   0   0]\n"
      ]
     }
    ],
    "source": [
+    "def metrical(volume=127, size=L):\n",
+    "    '''\n",
+    "    Helper function computing a near-to-one metrical grid for the beat.\n",
+    "    '''\n",
+    "    levels =  np.repeat(volume, size)\n",
+    "    \n",
+    "    for i in range(size):\n",
+    "        for j in range(N):\n",
+    "            if (i%(2**j) != 0):\n",
+    "                levels[i] *= 0.85\n",
+    "                \n",
+    "    return levels.astype(int)\n",
+    "\n",
     "from midiutil import MIDIFile\n",
     "\n",
     "def rhythm_to_midi(rhythm):\n",
@@ -2331,8 +2363,8 @@
     "    time     = 1    # In beats\n",
     "    duration = 1    # In beats\n",
     "    tempo    = 400  # In BPM\n",
-    "    instrument = 100\n",
-    "    volumes  = np.asarray(rhythm).astype(int).tolist()  # 0-127, as per the MIDI standard\n",
+    "    instrument = 12\n",
+    "    volumes  = np.asarray(rhythm).astype(int).tolist() * metrical(127, 4*L)  # 0-127, as per the MIDI standard\n",
     "\n",
     "    print(volumes)\n",
     "    \n",
@@ -2342,12 +2374,12 @@
     "    # Rhythm\n",
     "    MyMIDI.addProgramChange(tracknum=0, channel=0, time=0, program = instrument)\n",
     "    for i, volume in enumerate(volumes):\n",
-    "        MyMIDI.addNote(track=0, channel=0, pitch=50, time=time + i, duration=duration, volume=127*volume)\n",
+    "        MyMIDI.addNote(track=0, channel=0, pitch=50, time=time + i, duration=duration, volume=volume)\n",
     "\n",
     "    with open(\"test.mid\", \"wb\") as output_file:\n",
     "        MyMIDI.writeFile(output_file)   \n",
     "        \n",
-    "rhythm_to_midi(ok)"
+    "rhythm_to_midi(generated_beat)"
    ]
   },
   {
@@ -2448,6 +2480,13 @@
    "metadata": {},
    "source": [
     "# Plot of both entropy and ENB on same graph against loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each segments connects 2 templates that have been paired. Red color means that the loss value for the couple was low, while yellow and grfenish color indicates a high (bad) loss value."
    ]
   },
   {
