--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -2207,18 +2207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Toy templates to test code\n",
-    "template1 = ((), p_beat)\n",
-    "template2 = ((),())"
+    "template1 = ((),())\n",
+    "template2 = ((),p_rest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 425,
    "metadata": {
     "scrolled": true
    },
@@ -2226,11 +2226,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0., 1., 1., 0., 1., 0., 0., 0., 1., 0., 1., 0., 1., 0., 0., 0., 0.,\n",
-       "       0., 1., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1., 0., 0., 0.])"
+       "array([1., 1., 1., 0., 1., 1., 0., 0., 0., 1., 0., 0., 1., 1., 1., 0., 0.,\n",
+       "       0., 0., 1., 0., 1., 1., 0., 0., 0., 1., 0., 1., 0., 0., 0.])"
       ]
      },
-     "execution_count": 420,
+     "execution_count": 425,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2327,15 +2327,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  0  76  90   0 107   0   0   0 127   0  90   0 107   0   0   0   0   0\n",
-      "  90  76 107   0   0   0 127  76  90  76 107   0   0   0]\n"
+      "[127  76  90   0 107  76   0   0   0  76   0   0 107  76  90   0   0   0\n",
+      "   0  76   0  76  90   0   0   0  90   0 107   0   0   0]\n"
      ]
     }
    ],
